@@ -1,5 +1,9 @@
 2005-01-10  Davyd Madeley  <davyd@madeley.id.au>
 
+	* stickynotes.c: Fix stickynotes in RTL environments.
+
+2005-01-10  Davyd Madeley  <davyd@madeley.id.au>
+
 	* utils.c: Fix tiny error calling wrong function. Why hasn't this
 	  broken?
 
